infra-live-v3/dev/vpc/.terragrunt-cache/-2RGk8I-bUWD7Fnppdd9EB1Vexk/MdwhOMViqBT04I5XSCb5mcA6oIc/4-nat.tf
resource "aws_eip" "this" {
  # vps = true
  tags = {
    "Name" = "${var.env}-nat"
  }
}

resource "aws_nat_gateway" "this" {

  allocation_id = aws_eip.this.id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name = "${var.env}-nat"
  }

  depends_on = [aws_internet_gateway.this]
}
